[DAQ-2239] remove org.eclipse.scanning.servlet.Services
Change-Id: I84fe1523b8f381ec428e033b832df3361405ce6d